--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "ngx-bootstrap": "^3.1.1",
     "popper.js": "^1.14.4",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "lodash": ">=4.17.13"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.6",
@@ -47,6 +48,7 @@
     "protractor": "^5.4.1",
     "ts-node": "~5.0.1",
     "tslint": "^5.9.1",
-    "typescript": "^2.7.2"
+    "typescript": "^2.7.2",
+    "lodash": ">=4.17.13"
   }
 }
