--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
+    "@angular/compiler": "^6.1.3",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
@@ -26,12 +26,12 @@
     "ngx-bootstrap": "^3.1.1",
     "popper.js": "^1.14.4",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26",
-    "lodash": ">=4.17.13"
+    "typescript": "^2.9.2",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.6",
-    "@angular/cli": "~6.0.7",
+    "@angular-devkit/build-angular": "~0.7.0",
+    "@angular/cli": "^6.1.3",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
@@ -45,10 +45,10 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "lodash": ">=4.17.13",
+    "ws": ">=3.3.1",
     "protractor": "^5.4.1",
     "ts-node": "~5.0.1",
-    "tslint": "^5.9.1",
-    "typescript": "^2.7.2",
-    "lodash": ">=4.17.13"
+    "tslint": "^5.9.1"
   }
 }
